@@ -1,3 +1,12 @@
+2010-01-06  Simon Hausmann  <simon.hausmann@nokia.com>
+
+        Unreviewed trivial Qt build fix.
+
+        Prefix the phonon includes with phonon/ to avoid conflicts with the S60
+        audio routing API ( http://wiki.forum.nokia.com/index.php/Audio_Routing_API ).
+
+        * platform/graphics/qt/MediaPlayerPrivatePhonon.cpp:
+
 2010-01-05  Darin Fisher  <darin@chromium.org>
 
         Reviewed by Adam Barth.
